--- a/Wood_Colored_updated.css
+++ b/Wood_Colored_updated.css
@@ -24,7 +24,7 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('https://cdn.jsdelivr.net/gh/Phlooo/RedactHaze-stylesheet@master/images/backgrounds/wood.jpg');
+    background-image: url('https://redacted.sh/static/styles/postmod/images/wood.jpg');
     font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
     font-size: 12px;
     font-weight: 400;
